[gd_scene load_steps=12 format=1]

[ext_resource path="res://pong.gd" type="Script" id=1]
[ext_resource path="res://textures/separator.tex" type="Texture" id=2]
[ext_resource path="res://levels/test/scoreboard.tscn" type="PackedScene" id=3]
[ext_resource path="res://levels/test/ball_spawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://levels/test/player.tscn" type="PackedScene" id=5]
[ext_resource path="res://levels/test/pad.tscn" type="PackedScene" id=6]
[ext_resource path="res://textures/right_pallete.tex" type="Texture" id=7]
[ext_resource path="res://textures/left_pallete.tex" type="Texture" id=8]

[sub_resource type="SegmentShape2D" id=1]

custom_solver_bias = 0.0
a = Vector2( -30.768, -53.4667 )
b = Vector2( 30.672, -53.4667 )

[sub_resource type="SegmentShape2D" id=2]

custom_solver_bias = 0.0
a = Vector2( -30.768, 53.2 )
b = Vector2( 30.672, 53.2 )

[sub_resource type="LineShape2D" id=3]

custom_solver_bias = 0.0
normal = Vector2( 0, -1 )
d = 0.0

[node name="Node2D" type="Node2D"]

transform/pos = Vector2( 1, 0 )
script/script = ExtResource( 1 )
__meta__ = { "__editor_plugin_screen__":"2D" }
PAD_SPEED = 300
IMPULSE_LIMIT = 0.1

[node name="separator" type="Sprite" parent="."]

transform/pos = Vector2( 319, -1.39745 )
transform/scale = Vector2( 0.3692, 0.995453 )
texture = ExtResource( 2 )
centered = false

[node name="scoreboard" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 320, 40 )

[node name="blocking_walls" type="StaticBody2D" parent="."]

transform/pos = Vector2( 319.5, 200.5 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 10.4167, 0, 0, 3.75, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 10.4167, 0, 0, 3.75, 0, 0 )
shapes/1/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = { "_editor_collapsed":true }

[node name="top_wall" type="CollisionShape2D" parent="blocking_walls"]

transform/scale = Vector2( 10.4167, 3.75 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="bottom_wall" type="CollisionShape2D" parent="blocking_walls"]

transform/scale = Vector2( 10.4167, 3.75 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 1

[node name="left_goal_wall" type="StaticBody2D" parent="."]

transform/pos = Vector2( 320, 200 )
input/pickable = false
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( -8.74228e-08, 2, -1, -4.37114e-08, -321, 0 )
shapes/0/trigger = true
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = { "_editor_collapsed":true }

[node name="left_goal_wall_col" type="CollisionShape2D" parent="left_goal_wall"]

transform/pos = Vector2( -321, 0 )
transform/rot = -90.0
transform/scale = Vector2( 2, 1 )
shape = SubResource( 3 )
trigger = true
_update_shape_index = 0

[node name="right_goal_wall" type="StaticBody2D" parent="."]

transform/pos = Vector2( 320, 200 )
input/pickable = false
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( -8.74228e-08, -2, 1, -4.37114e-08, 320, 0 )
shapes/0/trigger = true
collision/layers = 1
collision/mask = 0
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = { "_editor_collapsed":true }

[node name="right_goal_wall_col" type="CollisionShape2D" parent="right_goal_wall"]

transform/pos = Vector2( 320, 0 )
transform/rot = 90.0
transform/scale = Vector2( 2, 1 )
shape = SubResource( 3 )
trigger = true
_update_shape_index = 0

[node name="ball_spawner" parent="." instance=ExtResource( 4 )]

[node name="right_player" parent="." instance=ExtResource( 5 )]

MOVE_UP_ACTION = ""
MOVE_DOWN_ACTION = ""
MOUSE_CONTROLLED = true

[node name="pad" parent="right_player" groups=[ "pads" ] instance=ExtResource( 6 )]

transform/pos = Vector2( 540, 196 )
collision/margin = 0.08
pad_texture = ExtResource( 7 )

[node name="left_player" parent="." instance=ExtResource( 5 )]

MOVE_UP_ACTION = "left_move_up"
MOVE_DOWN_ACTION = "left_move_down"
SPECIAL_1_ACTION = "left_special_1"
SWALL_SPAWN_X = 240

[node name="pad" parent="left_player" groups=[ "pads" ] instance=ExtResource( 6 )]

transform/pos = Vector2( 100, 196 )
collision/margin = 0.08
pad_texture = ExtResource( 8 )


